[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/Comfortaa/static/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/pics/2.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/button.mp3" type="AudioStream" id=3]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
size = 100
extra_spacing_top = 5
extra_spacing_char = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 100
extra_spacing_top = 5
extra_spacing_char = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="2" type="Sprite" parent="."]
position = Vector2( 571, 295 )
scale = Vector2( 1.61077, 1.61077 )
texture = ExtResource( 2 )

[node name="Play" type="Button" parent="."]
modulate = Color( 0, 0.952941, 1, 0.517647 )
self_modulate = Color( 0.360784, 0.666667, 1, 0.968627 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -511.0
margin_top = 281.0
margin_right = -124.0
margin_bottom = 406.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="Scores" type="Button" parent="."]
modulate = Color( 0, 0.952941, 1, 0.517647 )
self_modulate = Color( 0.295898, 0.633157, 1, 0.968627 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -511.0
margin_top = 428.0
margin_right = -27.0
margin_bottom = 553.0
custom_fonts/font = SubResource( 4 )
text = "SCORE"

[node name="NameDialog" type="Panel" parent="."]
modulate = Color( 0.286275, 0.882353, 1, 0.819608 )
anchor_left = 0.384
anchor_right = 0.645
anchor_bottom = 0.063
margin_left = 10.784
margin_top = 298.0
margin_right = 56.52
margin_bottom = 332.2

[node name="NameInput" type="TextEdit" parent="NameDialog"]
margin_left = 66.0
margin_top = 14.0
margin_right = 299.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 5 )

[node name="Label" type="Label" parent="NameDialog"]
margin_left = 3.0
margin_top = 27.0
margin_right = 67.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.407843, 0.956863, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "NAME : "

[node name="NeedName" type="Label" parent="."]
visible = false
margin_left = 115.0
margin_top = 200.0
margin_right = 635.0
margin_bottom = 251.0
custom_colors/font_color = Color( 0.470588, 1, 0.87451, 1 )
custom_fonts/font = SubResource( 7 )
text = "Must Type Your Name"

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="GameName" type="Label" parent="."]
modulate = Color( 0, 0.388235, 1, 0.611765 )
margin_left = 29.0
margin_top = 32.0
margin_right = 648.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 8 )
text = "Starry 
           Slide"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Scores" to="." method="_on_Scores_pressed"]
